class 02-basics of html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MERN | 02</title>
 </head>
 <body>
-	<h1>VIm is so cool </h1>
-</body>
+    <header>
+        <nav>
+            <span>Home</span>
+            <span>Page 1</span>
+            <span>Page 2</span>
+            <span>Page 3</span>
+        </nav>
+    </header>
+    
+    <main>
+        <hr>
+	<h1>Learning HTML tags</h1>
+    <p>'&nbsp;' ampersand nbsp createes non breaking spaces</p>
+    <hr>
+    <p>
+        Use<a href="https://chromewebstore.google.com/detail/requestly-open-source-htt/mdnleldcmiljblolnjhpnblkcekpdkpa">requestly</a> Extension to access request and response headers.
+    </p>
+    <hr>
+    <h2>use pwd command in terminal to get the absolute path</h2>
+    <hr>
+    <p>LIGHTHOUSE Tool is used to evaluate accessability of a WEBPAGE</p>
+
+    
+    </main>
+  </body>
 </html>
